--- a/src/main/resources/templates/paciente/index.html
+++ b/src/main/resources/templates/paciente/index.html
@@ -7,15 +7,25 @@
             <nav th:replace="layout :: menu">(menu)</nav>
             <strong th:text="${now}"></strong>
             <h1>Paciente</h1>
+            <a th:href="@{/paciente/novo}" 
+                class="btn btn-primary" role="button">Novo</a>
             <table class="table">
                 <thead>
-                    <th>id</th>
-                    <th>nome</th>
+                    <th>Id</th>
+                    <th>Nome</th>
+                    <th>Sexo</th>
+                    <th>Data de Nascimento</th>
+                    <th></th>
                 </thead>
                 <tbody>
                     <tr th:each="umpaciente : ${listapacientes}">
                         <td th:text="${umpaciente.id}"></td>
                         <td th:text="${umpaciente.nome}"></td>
+                        <td th:text="${umpaciente.sexo}"></td>
+                        <td th:text="${umpaciente.dataNascimento}"></td>
+                        <td>
+                            <a th:href="@{'/paciente/alterar/' + ${umpaciente.id}}"class="btn btn-primary">Alterar</a>
+                        </td>
                     </tr>
                 </tbody>
             </table>
