--- a/src/main/resources/templates/paciente/form.html
+++ b/src/main/resources/templates/paciente/form.html
@@ -6,10 +6,16 @@
         <div class="container">
             <nav th:replace="layout :: menu">(menu)</nav>
             <form th:action="@{/paciente/(form)}" th:object="${paciente}" method="post">
+                <input type="hidden" th:field="*{id}">
                 <div class="form-group">
                     <label for="txtnome">Nome</label>
                     <input type="text" th:field="*{nome}" class="form-control" 
                     id="txtnome" placeholder="Nome">
+                </div>
+
+                <div calss="form-group">
+                    <label>Data nascimento</label>
+                    <input type="date" th:field="*{dataNascimento}" class="form-control"> 
                 </div>
                 
                 <button type="submit" class="btn btn-primary">Enviar</button>
