--- a/src/main/resources/templates/paciente/index.html
+++ b/src/main/resources/templates/paciente/index.html
@@ -16,9 +16,9 @@
                     <th>Sexo</th>
                     <th>Data de Nascimento</th>
                     <th>
-                        <form class="form-inline mr-auto">
-                            <input class="form-control mr-sm-2" type="text" placeholder="Nome do Paciente" aria-label="Search">
-                            <button class="btn blue-gradient btn-rounded btn-sm my-0" type="submit">Pesquisar</button>
+                        <form class="form-inline mr-auto" th:action="@{/paciente}">
+                            <input class="form-control mr-sm-2" type="text" placeholder="Nome do Paciente" aria-label="Search" name="keyword"/>
+                            <button class="btn blue-gradient btn-rounded btn-sm my-0" type="submit">Search</button>
                           </form>
                     </th>
                 </thead>
